2-asm/grafana-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana
  namespace: monitoring
spec:
  hosts:
  - "mern-grafana.cassiopeia.public.t-cloud.com"
  gateways:
  - istio-system/grafana-gateway
  http:
  - route:
    - destination:
        host: grafana   # cie-collector Grafana service, port 3000
        port:
          number: 3000
